<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_league_administration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="paddysoft.yeticoach.LeagueAdministrationActivity"
    tools:showIn="@layout/activity_league_administration">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LeagueAdminLeagueNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_span="1"
                android:text="@string/league_colon_space" />

            <TextView
                android:id="@+id/LeagueAdminLeagueName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="4"
                android:text="@string/placeholder" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LeagueAdminUserLabel"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_span="1"
                android:text="@string/administrator_colon_space" />

            <TextView
                android:id="@+id/LeagueAdminUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="4"
                android:text="@string/placeholder" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LeagueAdminSportLabel"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_span="1"
                android:text="@string/sport_colon_space" />

            <TextView
                android:id="@+id/LeagueAdminSport"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="4"
                android:text="@string/placeholder" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LeagueAdminMinAgeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_span="1"
                android:text="@string/minimum_age_colon_space" />

            <TextView
                android:id="@+id/LeagueAdminMinAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="4"
                android:text="@string/placeholder" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LeagueAdminMaxAgeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_span="1"
                android:text="@string/maximum_age_colon_space" />

            <TextView
                android:id="@+id/LeagueAdminMaxAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="4"
                android:text="@string/placeholder" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LeagueAdminStartDateLabel"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_span="1"
                android:text="@string/begins_colon_space" />

            <TextView
                android:id="@+id/LeagueAdminStartDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="4"
                android:text="@string/placeholder" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/LeagueAdminEndDateLabel"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_span="1"
                android:text="@string/ends_colon_space" />

            <TextView
                android:id="@+id/LeagueAdminEndDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_span="4"
                android:text="@string/placeholder" />

        </TableRow>

    </TableLayout>


</RelativeLayout>
